--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -17,7 +17,7 @@ jobs:
       packages: write
 
     outputs:
-      image: ${{ steps.meta.outputs.tags }}
+      image: ghcr.io/${{ github.repository }}:sha-${{ github.sha }}
 
     steps:
       - name: Checkout repository
