--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,8 @@ services:
     container_name: CIR-api
     env_file:
       - .env
-    ports:
-      - "4000:3000"
+    expose:
+      - "3000"
     depends_on:
       - postgres
     restart: always
